[package]
name = "goldberg-drop"
version = "0.1.0"
edition = "2021"
default-run = "goldberg-drop"
build = "build.rs"

[[bin]]
name = "goldberg-drop"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
directories = "6.0.0"
eframe = { version = "0.35.0", features = ["glow"] }
egui = "0.35.0"
image = { version = "0.25", default-features = false, features = ["png"] }
mslnk = "0.1.8"
regex = "1.13.0"
reqwest = { version = "0.13.4", features = ["blocking", "json", "query"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
walkdir = "2.5.0"
zip = "8.6.0"

[build-dependencies]
winresource = "0.1"
